# sb-symbolic-math

./: .gitignore  AGENT.md  Cargo.toml  README.md  SPEC.md  features.md  package.json  pnpm-lock.yaml
crates/socrates-math-algebra/: Cargo.toml
crates/socrates-math-algebra/src/: lib.rs  linear.rs  polynomial.rs
crates/socrates-math-app/: Cargo.toml
crates/socrates-math-app/examples/: api.rs  playground.rs
crates/socrates-math-app/src/: lib.rs
crates/socrates-math-app/tests/: consumer_exercises_spec.rs  slice1_acceptance.rs
crates/socrates-math-compare/: Cargo.toml
crates/socrates-math-compare/src/: lib.rs
crates/socrates-math-core/: Cargo.toml
crates/socrates-math-core/src/: context.rs  exact.rs  ids.rs  lib.rs  outcome.rs  term.rs
crates/socrates-math-elab/: Cargo.toml
crates/socrates-math-elab/src/: diagnostic.rs  elaborator.rs  lib.rs
crates/socrates-math-eval/: Cargo.toml
crates/socrates-math-eval/src/: lib.rs
crates/socrates-math-kernel/: Cargo.toml
crates/socrates-math-kernel/src/: lib.rs  proof.rs  verifier.rs
crates/socrates-math-protocol/: Cargo.toml
crates/socrates-math-protocol/src/: lib.rs
crates/socrates-math-render/: Cargo.toml
crates/socrates-math-render/src/: lib.rs
crates/socrates-math-solve/: Cargo.toml
crates/socrates-math-solve/src/: lib.rs  linear.rs
crates/socrates-math-syntax/: Cargo.toml
crates/socrates-math-syntax/src/: cst.rs  diagnostic.rs  lib.rs  parser.rs
crates/socrates-math-wasm/: Cargo.toml
crates/socrates-math-wasm/src/: lib.rs
playgrounds/typescript/: README.md  package.json  tsconfig.json
playgrounds/typescript/src/: index.ts  rust-engine-binding.ts
