[package]
name = "socrates-math-algebra"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
socrates-math-core = { path = "../socrates-math-core" }
serde.workspace = true

[dev-dependencies]
socrates-math-elab = { path = "../socrates-math-elab" }
socrates-math-syntax = { path = "../socrates-math-syntax" }
