[package]
name = "socrates-math-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
socrates-math-app = { path = "../socrates-math-app" }
socrates-math-protocol = { path = "../socrates-math-protocol" }
serde_json.workspace = true
wasm-bindgen.workspace = true
